...
            "state" : "translated",
            "value" : "HL7 FHIR"
          }
        }
      }
    },
    "Hydration" : {

    },
    "Hydration Ounces" : {

    },
    "Hydration Progress" : {
...
    "image" : {

    },
    "Image Analysis Results:" : {

    },
    "Intake time" : {

    },
    "Interesting Modules" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
...
    "plus.circle" : {

    },
    "Produce In Season Recommendations" : {

    },
    "Protein" : {

    },
    "Protein Content" : {

    },
    "Protein Grams" : {

    },
    "Protein Progress" : {
...
    "Protein Recommendations" : {

    },
    "Reach Your Goals 🎯" : {

    },
    "Recall Last Intake" : {

    },
    "Remaining" : {

    },
    "Save" : {
...
